--- a/app/views/admin/product_management/_new_product.jade
+++ b/app/views/admin/product_management/_new_product.jade
@@ -41,7 +41,7 @@
         .form-group.textarea
           label(for="dest") 简介*
           .input-box.area-box
-            textarea#dest.required.rqrednum(type="text",name="product[dest]")
+            textarea#dest.required.rqrednum(type="text",name="product[description]")
         .form-group.uploadPic-form
           label 图片*
           .pic-wrap
