--- a/app/views/mobile/home/index.jade
+++ b/app/views/mobile/home/index.jade
@@ -32,8 +32,8 @@ block content
                       p.name #{product.name}
                       .priceattention.clearfix
                         p.price ￥#{product.price}
-                        span.attention.rt 1841
-                          i.fa.fa-heart-o.lf
+                        //-span.attention.rt 1841
+                          //-i.fa.fa-heart-o.lf
           .wall-col.rt
             each product,index in products
               if index%2!=0
@@ -45,8 +45,8 @@ block content
                       p.name #{product.name}
                       .priceattention.clearfix
                         p.price ￥#{product.price}
-                        span.attention.rt 1841
-                          i.fa.fa-heart-o.lf
+                        //-span.attention.rt 1841
+                          //-i.fa.fa-heart-o.lf
     include ./_search
 
 block scripts
