--- a/app/views/mobile/order/receipt.jade
+++ b/app/views/mobile/order/receipt.jade
@@ -6,6 +6,6 @@ block content
       a.arr(href="/")
         i.fa.fa-angle-left
       h1.title 确认收货
-    .content.native-scroll.wrapper
+    .content.native-scroll.wrapper(style="padding-top: 3rem;")
       p 订单已完成
-        a(href="/evaluate/evaluate?_id=#{_id}") 去评价
+        a(href="/evaluate/evaluate?_id=#{_id}",style='color: blue;') 去评价
