--- a/app/views/mobile/search/index.jade
+++ b/app/views/mobile/search/index.jade
@@ -3,7 +3,7 @@ extends ../../layout
 block content
   .home.search-page.page
     include ../../includes/header
-    .content.wall.native-scroll.wrapper
+    .content.wall.native-scroll.wrapper(style='padding-top: 2.2rem;')
       .wal-list.clearfix
         if products.length == 0
           p 没有您要找的内容，请重新搜索
