--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -43,8 +43,8 @@ block content
           each evl in evls
             .rate-item
               .rate-user
-                img.avatar(src="/images/d1.jpg")
-                span.name 空间规划2016
+                img.avatar(src="#{evl.user_headimgurl}")
+                span.name #{evl.user_nickname}
               .rate-cont #{evl.content}
               .rate-attr
                 span.time #{evl.createAt.getYear()}-#{evl.createAt.getMonth()}-#{evl.createAt.getDay()}
