--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -36,7 +36,7 @@ block content
             span.item 销量 #{product.sale_num}
       .detail-rates
         .rates-head
-          a.title(href="/evaluate/list?id=#{product._id}") 累计评价 #{count}
+          a.title(href="/evaluate/list?id=#{product._id}",external) 累计评价 #{count}
             span.more 更多
               i.fa.fa-angle-right
         .rates-list
