--- a/app/views/mobile/user/index.jade
+++ b/app/views/mobile/user/index.jade
@@ -3,7 +3,7 @@ extends ../../layout
 block content
   .page.homepage
     header.head-block.bar.bar-nav.header
-      a.arr(href="javascript:history.back();")
+      a.arr(href="/")
         i.fa.fa-angle-left
       h1.title 我的主页
     .home-header
